kubernetes/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: python-system-monitoring
  name: python-system-monitoring
  namespace: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-system-monitoring
  strategy:
    type: RollingUpdate       # Mise à jour continue
    rollingUpdate:
      maxSurge: 1             # Kubernetes autorise l'exécution temporaire de 3 pods maximum (2 anciens pods + 1 nouveau pod)
      maxUnavailable: 1       # vous avez 2 réplicas, au moins 1 pods seront toujours en cours d'exécution pendant que l'un d'eux est mis à jour ou remplacé.
  template:
    metadata:
      labels:
        app: python-system-monitoring
    spec:
      containers:
      - name: python-system-monitoring
        image: 192.168.222.60:8083/python-system-monitoring:8
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP  
      imagePullSecrets:
      - name: nexus-secret
