kubernetes/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-system-monitoring
  name: python-system-monitoring
  namespace: development
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: python-system-monitoring
  type: NodePort
